# dMeter

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  check_sensors.ps1  dMeter.md
src/: config.rs  main.rs  main_compact.rs  state.rs
src/collectors/: gpu.rs  memory_info.rs  mod.rs  system.rs
src/state/: mod.rs
src/ui/: apps.rs  colors.rs  cpu.rs  disk.rs  disk_io.rs  gol.rs  gpu.rs  header.rs  layout.rs  memory.rs  mod.rs  network.rs  processes.rs
src/utils/: mod.rs
