[package]
name = "dmeter"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
sysinfo = "0.32"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
toml = "0.8"
dirs = "5"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
nvml-wrapper = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
