[package]
name = "dmeter"
version = "0.1.0"
edition = "2021"
authors = ["dMeter Contributors"]
description = "A fast, beautiful terminal system monitor built with Rust"
license = "MIT"
repository = "https://github.com/yourusername/dmeter"
keywords = ["system-monitor", "tui", "performance", "monitoring"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
sysinfo = "0.32"
toml = "0.8"
dirs = "5"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
nvml-wrapper = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
